<resources>
    <string name="app_name">Sunshine</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_detail">Detail</string>
    <string name="hello_world">Hello, World!</string>
    <string name="activity_settings">Settings</string>

    <!-- Label for the location preference [CHAR LIMIT=30] -->
    <string name="pref_location_label">Zip</string>

    <!-- Key name for storing location in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_location_key" translatable="false">location</string>

    <!-- Default postal code for location preference [CHAR LIMIT=NONE] -->
    <string name="pref_location_default" translatable="false">94043</string>

    <string name="pref_location_category">Location</string>

    <string name="pref_general_category">General</string>

    <!-- Label for the Units preference -->
    <string name="pref_units_label">Units</string>
    <!-- Key for storign the units preference in SharedPreferences -->
    <string name="pref_units_key" translatable="false">units</string>

    <string name="pref_units_metric" translatable="false">metric</string>
    <string name="pref_units_imperial" translatable="false">imperial</string>

    <string name="pref_units_metric_label">Metric</string>
    <string name="pref_units_imperial_label">Imperial</string>

    <string name="action_map_view">View on Map</string>


</resources>
