<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_general_category">
        <ListPreference
            android:title="@string/pref_units_label"
            android:key="@string/pref_units_key"
            android:entries="@array/pref_units_options"
            android:entryValues="@array/pref_units_value"
            android:defaultValue="@string/pref_units_metric">
        </ListPreference>
    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/pref_location_category"
        >


        <EditTextPreference
            android:title="@string/pref_location_label"
            android:key="@string/pref_location_key"
            android:defaultValue="@string/pref_location_default"
            android:inputType="text"
            android:singleLine="true">
        </EditTextPreference>

    </PreferenceCategory>






</PreferenceScreen>